Initial commit for myRead project.

--- a/src/App.css
+++ b/src/App.css
@@ -78,6 +78,7 @@ body, .app {
 .search-books-bar {
   position: fixed;
   width: 100%;
+  background-color: white;
   top: 0;
   left: 0;
   z-index: 5;
